--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,18 @@ under the License.
 			<artifactId>bigpetstore-data-generator</artifactId>
 			<version>0.9.0-SNAPSHOT</version>
 		</dependency>
-	
+
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-streaming-core</artifactId>
+			<version>0.10-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-clients</artifactId>
+			<version>0.10-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 	
