--- a/pom.xml
+++ b/pom.xml
@@ -26,20 +26,33 @@ under the License.
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
+	<repositories>
+				<repository>
+					<id>bintray-rnowling-bigpetstore</id>
+					<name>bintray</name>
+					<url>http://dl.bintray.com/rnowling/bigpetstore</url>
+				</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-java</artifactId>
 			<version>0.9.0-hadoop1</version>
 		</dependency>
-		<!-- clone asf bigtop, run "cd bigtop-bigpetstore/bigpetstore-data-generator/ ; gradle install -->
+		<dependency>
+			<groupId>com.github.rnowling.bigpetstore</groupId>
+			<artifactId>bigpetstore-data-generator</artifactId>
+			<version>0.2.1</version>
+		</dependency>
+
+
+		<!-- clone asf bigtop, run "cd bigtop-bigpetstore/bigpetstore-data-generator/ ; gradle install
 		<dependency>
 			<groupId>org.apache.bigtop</groupId>
 			<artifactId>bigpetstore-data-generator</artifactId>
 			<version>0.9.0-SNAPSHOT</version>
 		</dependency>
-
-
+		-->
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-core</artifactId>
