--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ under the License.
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.bigtop</groupId>
-	<artifactId>flink-java-examples</artifactId>
+	<artifactId>flink-bps</artifactId>
 	<name>flink-java-examples</name>
 	<version>1.0</version>
 	<packaging>jar</packaging>
@@ -40,6 +40,22 @@ under the License.
 			<version>0.9.0-hadoop1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-streaming-core</artifactId>
+			<version>0.9.0-hadoop1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-runtime</artifactId>
+			<version>0.9.0-hadoop1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-clients</artifactId>
+			<version>0.9.0-hadoop1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.github.rnowling.bigpetstore</groupId>
 			<artifactId>bigpetstore-data-generator</artifactId>
 			<version>0.2.1</version>
@@ -53,16 +69,7 @@ under the License.
 			<version>0.9.0-SNAPSHOT</version>
 		</dependency>
 		-->
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-streaming-core</artifactId>
-			<version>0.10-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-clients</artifactId>
-			<version>0.10-SNAPSHOT</version>
-		</dependency>
+
 
 	</dependencies>
 	
