--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@ under the License.
 					<url>http://dl.bintray.com/rnowling/bigpetstore</url>
 				</repository>
 	</repositories>
+	<dependency>
+		<groupId>com.esotericsoftware.kryo</groupId>
+		<artifactId>kryo</artifactId>
+		<version>2.16</version>
+	</dependency>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
