--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@ under the License.
             <artifactId>flink-clients</artifactId>
             <version>0.9.1-hadoop1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.4.5</version>
+        </dependency>
         <dependency>
             <groupId>com.github.rnowling.bigpetstore</groupId>
             <artifactId>bigpetstore-data-generator</artifactId>
