--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@ under the License.
 
     <properties>
         <java.version>1.7</java.version>
+        <scala.version>2.10</scala.version>
         <maven.version.min>3.2.1</maven.version.min>
     </properties>
 
@@ -74,6 +75,11 @@ under the License.
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-scala</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
