--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@ under the License.
         <java.version>1.7</java.version>
         <scala.version>2.10.4</scala.version>
         <maven.version.min>3.2.1</maven.version.min>
-        <flink.version>0.10.1</flink.version>
+        <flink.version>1.0.0</flink.version>
     </properties>
 
     <repositories>
@@ -51,28 +51,28 @@ under the License.
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-scala</artifactId>
+            <artifactId>flink-scala_2.10</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
         <!-- Flink streaming API, implementation in Java -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java</artifactId>
+            <artifactId>flink-streaming-java_2.10</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
         <!-- Flink ML for the recommender -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-ml</artifactId>
+            <artifactId>flink-ml_2.10</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
         <!-- Table API for ETL -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table</artifactId>
+            <artifactId>flink-table_2.10</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
